[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/color-palette/TileContainer.gd" type="Script" id=1]
[ext_resource path="res://addons/color-palette/utilities/EditorTheme.tres" type="Theme" id=2]
[ext_resource path="res://addons/color-palette/ColorPaletteContainer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[node name="ColorPaletteContainer" type="PanelContainer"]
margin_right = 494.0
margin_bottom = 152.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 493.0
margin_bottom = 151.0
mouse_filter = 1
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 489.0
margin_bottom = 147.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 486.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 95.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.576471, 0.576471, 0.576471, 1 )
text = "Palette Name"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 226.0
margin_bottom = 22.0
mouse_filter = 1
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLoadToPicker" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 344.0
margin_bottom = 22.0
hint_tooltip = "Loads the palette into the Color Picker presets (in your editor settings) so you can use these colors in all color selection dialogs."
text = "Load into Picker"

[node name="BtnUpdateFromPicker" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 486.0
margin_bottom = 22.0
hint_tooltip = "Replaces the palette colors with whatever you have in your color picker presets."
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Update From Picker"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 486.0
margin_bottom = 26.0
mouse_filter = 1
custom_constants/separation = 0

[node name="PaletteTileContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 486.0
margin_bottom = 30.0
mouse_filter = 1

[node name="TileContainer" type="Container" parent="MarginContainer/VBoxContainer/PaletteTileContainer"]
margin_right = 486.0
mouse_filter = 1
script = ExtResource( 1 )
